# Slippi-Ranked-Stats

./: .gitignore  CHANGELOG.md  HOW TO RELEASE UPDATES.txt  INSTALL.txt  README.md  Slippi Ranked Stats.vbs  api.py  app.py  build.sh  check-downloads.ps1  db.py  future-log.md  index.html  launcher.py  package-lock.json  package.json  release-notes-draft.md  release-notes.md  replay_parser.py  requirements.txt  run.bat  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
data/: 12_51.db  ABCD_979.db  ABOX_847.db  ACSL_101.db  AGNT_607.db  AKIR_0.db  ALEX_154.db  ALEX_992.db  ALFI_102.db  ALP_0.db  AMSA_241.db  ANDY_345.db  ANT_0.db  ARTH_977.db  ASDF_467.db  ATHENA_0.db  AUJO_734.db  AWCA_224.db  BAG_533.db  BAIR_805.db  BAKE_799.db  BALK_157.db  BEST_242.db  BIGS_164.db  BIG_717.db  BIRM_684.db  BLAC_333.db  BLST_989.db  BLUE_748.db  BONN_899.db  BQ_655.db  BROP_137.db  BRUB_405.db  BS_909.db  BTW_894.db  BURN_148.db  CAPT_931.db  CEG_837.db  CHEE_691.db  CHMX_383.db  (+225 more)
docs/: dev_notes.md  grading_methodology.md  session-log.md
scripts/: PIPELINE_RUN.md  baseline_generator.py  bulk_compare_all.cjs  fetch_slippilab_replays.py  global_baseline_parser.py  grade_baselines.json  our_stats.cjs  parse_hf_replays.py  regen_benchmarks.py  requirements.txt  set_compare.cjs  set_grader.py
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Header.svelte  PremiumGate.svelte  SessionView.svelte  SetGradeDisplay.svelte  (+1 more)
(+23 files in other folders)
